tests/error/modifier_errors/dagger_loop3.err
Error: Invalid expression in dagger (at $FILE:10:12)
   | 
 8 |         with dagger:
 9 |             ok = [i for i in range(46)]
10 |         x = [i for i in range(46)]
   |             ^^^^^^^^^^^^^^^^^^^^^^ Loop found in a dagger context

Note:
   | 
 6 | def test() -> None:
 7 |     with dagger:
   |          ------ dagger modifier is used here

Guppy compilation failed due to 1 previous error
